# google-gemini-api-rag

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE.txt  README.md  app.py  app_multiuser.py  auth.py  config.toml  database.py  grant_permissions.py  main.py  models.py  pycache.md  pyproject.toml  rag_manager.py  reset_data_only.py  reset_db.py  reset_upload_files.py  setup_db.py
docs/: APPLICATION_LIFECYCLE.md  ARCHITECTURE.md  QUICKSTART.md  SETUP_MULTIUSER.md  USER_REGISTRATION.md
logs/: .gitkeep
scripts/: __init__.py  grant_permissions.py  setup_db.py
scripts/dev/: __init__.py  reset_data_only.py  reset_logs_files.py  reset_password.py  reset_upload_files.py
src/: __init__.py  config.py  exceptions.py
src/auth/: __init__.py  handlers.py
src/core/: __init__.py  rag_manager.py
src/db/: __init__.py  connection.py
src/db/models/: __init__.py  base.py  chat_session.py  document.py  message.py  user.py
src/utils/: __init__.py  formatters.py  logger.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_user_model.py
